--- a/backend/server/vercel.json
+++ b/backend/server/vercel.json
@@ -5,15 +5,26 @@
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "/server.js"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/server.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "https://home-automation-phi.vercel.app",
-                "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
-                "Access-Control-Allow-Credentials": "true"
-            }
+            "dest": "/server.js"
+        }
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    },
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "https://home-automation-phi.vercel.app" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" },
+                { "key": "Access-Control-Allow-Credentials", "value": "true" }
+            ]
         }
     ]
 }
