--- a/backend/server/vercel.json
+++ b/backend/server/vercel.json
@@ -1,30 +1,23 @@
 {
-    "version": 2,
-    "builds": [
-        { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/server/server.js",
+      "use": "@vercel/node"
     },
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "https://home-automation-phi.vercel.app" },
-                { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
-                { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" },
-                { "key": "Access-Control-Allow-Credentials", "value": "true" }
-            ]
-        }
-    ]
+    {
+      "src": "src/**/*",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)", 
+      "dest": "/backend/server/server.js"
+    },
+    {
+      "src": "/(.*)", 
+      "dest": "/src/$1"
+    }
+  ]
 }
