--- a/backend/server/vercel.json
+++ b/backend/server/vercel.json
@@ -1,19 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-        { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/server.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "https://home-automation-phi.vercel.app",
-                "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
-                "Access-Control-Allow-Credentials": "true"
-            }
-        }
-    ]
+  "version": 2,
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://home-automation-phi.vercel.app",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Date, X-Api-Version",
+        "Access-Control-Allow-Credentials": "true"
+      }
+    }
+  ]
 }
